2006-06-09 Sandro Santilli <strk@refractions.net>

	* tests/unit/geom/LineStringTest.cpp: removed
	signed/unsigned comparison warnings.
	* source/geomgraph/GeometryGraph.cpp,
	source/operation/buffer/OffsetCurveSetBuilder.cpp,
	source/operation/overlay/OverlayOp.cpp,
	source/operation/valid/RepeatedPointTester.cpp:
	Fixed warning after Polygon ring accessor methods
	changed to work with size_t. Small optimizations
	in loops.

2006-06-08 Mateusz Loskot <mateusz@loskot.net>

        * tests/unit/geom/DimensionTest.cpp (1.3): Fixed no-effect
	warning in test<1> from DimensionTest.cpp.

2006-06-08 Sandro Santilli <strk@refractions.net>

	* tests/unit/geom/GeometryFactoryTest.cpp: fixed
	compiler warnings about signed/unsigned comparisons.
	* source/algorithm/CentroidArea.cpp, source/geom/Polygon.cpp,
	source/geom/util/GeometryEditor.cpp,
	source/headers/geos/geom/Polygon.h, source/io/WKTWriter.cpp:
	getNumInteriorRing() return size_t, interiorRingN() takes size_t.
	* tests/unit/geom/CoordinateArraySequenceTest.cpp:
	fix signed/unsigned comparison warning.
	* tests/xmltester/markup/MarkupSTL.cpp: removed use of
	allocator<char>, which brings in some incompatibilities
	with libstdc++ 6.0.7 (gcc 4.0.2).
	* tests/xmltester/Makefile.am, tests/xmltester/testrunner.sh:
	added XML tests run to the 'make check' rule.
	* source/headers/geos/geom/CoordinateSequenceFactory.h,
	source/headers/geos/geom/GeometryComponentFilter.h,
	source/headers/geos/geom/GeometryFilter.h,
	source/headers/geos/geom/util/CoordinateOperation.h,
	source/headers/geos/geom/util/GeometryEditorOperation.h,
	source/headers/geos/geom/util/ShortCircuitedGeometryVisitor.h,
	source/headers/geos/geomgraph/NodeFactory.h,
	source/headers/geos/index/ItemVisitor.h,
	source/headers/geos/index/strtree/AbstractSTRtree.h,
	source/headers/geos/index/sweepline/SweepLineOverlapAction.h:
	Added missing virtual destructor to abstract classes.

2006-06-07 Mateusz Loskot <mateusz@loskot.net>

	* tests/unit/Makefile.am,