@@ -1,7 +1,10 @@
 2006-06-09 Sandro Santilli <strk@refractions.net>
 
-	* tests/unit/geom/LineStringTest.cpp: removed
-	signed/unsigned comparison warnings.
+	* tests/unit/geom/LineStringTest.cpp,
+	tests/unit/geom/LinearRingTest.cpp,
+	tests/unit/geom/MultiPointTest.cpp,
+	tests/unit/geom/PolygonTest.cpp:
+	removed signed/unsigned comparison warnings.
 	* source/geomgraph/GeometryGraph.cpp,
 	source/operation/buffer/OffsetCurveSetBuilder.cpp,
 	source/operation/overlay/OverlayOp.cpp,
